# Persuasion-Agent-RL-Environment

./: HF_SPACES_README.md  PITCH.md  README.md  client.py  models.py  openenv.yaml  pyproject.toml
Open Source Development/Web-Dev/: Backend.md  Frontend.md  Overview.md
server/: Dockerfile  app.py  fleet_oversight_log.txt  policy_hints.json  qtable.pkl  requirements.txt  sales_agent_takeaways.txt  sales_environment.py  test.py  train_script_minimal.py
training/: train_colab.py
