[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-env"
version = "0.2.0"
description = "B2B Sales RL Environment with Fleet AI Oversight - OpenEnv 0.2.1"
authors = [{name = "Hackathon Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["reinforcement-learning", "rl", "sales", "b2b", "openenv", "fleet-ai", "oversight"]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
client = [
    "websockets>=12.0",
]
training = [
    "trl>=0.7.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
]

[tool.setuptools]
packages = ["sales_env"]
